2004-11-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-utilities.[ch]:
	* src/nautilus-spatial-window.c:
	* src/nautilus-navigation-window-menus.c:
	* src/nautilus-window-menus.c:
	Move some functions to nautilus-ui-utilities
	
	* libnautilus-private/Makefile.am:
	* libnautilus-private/nautilus-ui-utilities.[ch]:
	Various ui utility functions
	
	* src/file-manager/fm-desktop-icon-view.c:
	* src/file-manager/fm-directory-view.c:
	* src/file-manager/fm-icon-view.c: 
	* src/file-manager/fm-list-view.c:
	Unmerge everything on destroy
	
	* src/nautilus-shell-ui.xml:
	Remove unused stuff
	
2004-11-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-clipboard-monitor.c:
	Handle ownership changes from XFixes
	
	* libnautilus-private/Makefile.am:
	* libnautilus-private/nautilus-clipboard-ui.xml:
	Remove (is now inline)
	
	* libnautilus-private/nautilus-clipboard.[ch]:
	Convert to GtkUIManager
	
	* src/nautilus-location-bar.c:
	* src/nautilus-notes-viewer.c:
	Adapt to NautilusClipboard changes

	* src/nautilus-window-menus.c:
	Remove duplicated action

	* src/file-manager/fm-actions.h:
	* src/file-manager/fm-directory-view.c:
	* src/file-manager/fm-icon-view.c:
	* src/file-manager/fm-list-view.c:
	* src/file-manager/nautilus-directory-view-ui.xml:
	Adapt to NautilusClipboard changes
	Fix paste into folder to not use stock accelerator

2004-11-17  Alexander Larsson  <alexl@redhat.com>

	* components/Makefile.am:
	Remove references to throbber
	
	* src/Makefile.am:
	* src/nautilus-throbber.[ch]:
	Moved throbber here and made it not be a bonobo object
	
	* src/nautilus-window-private.h:
	* src/nautilus-window-toolbars.c:
	Work with the throbber

2004-11-17  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-application.c:
	* src/nautilus-navigation-window.c:
	* src/nautilus-spatial-window.c:
	* src/nautilus-window-private.h:
	* src/nautilus-window.c:
	Make initial window geometry work.
