@@ -1,5 +1,13 @@
 2004-11-18  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-window-menus.c:
+	* src/nautilus-window-toolbars.c:
+	* libnautilus-private/nautilus-ui-utilities.[ch]:
+	(nautilus_action_from_menu_item), (nautilus_toolbar_action_from_menu_item):
+	Move code to utility functions.
+
+2004-11-18  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file-utilities.[ch]:
 	* src/nautilus-spatial-window.c:
 	* src/nautilus-navigation-window-menus.c:
